--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/mic.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -78,7 +78,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/airpod.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -93,7 +93,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/drone.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -108,7 +108,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/lights.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -123,7 +123,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/setup.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -138,7 +138,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/camera.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -153,7 +153,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/single-light.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
@@ -168,7 +168,7 @@ Buyers protection possible!</p>
 Buyers protection possible!</p>
             </div>
             <div class="box">
-                <img src="images/tripod.png" alt="">
+                <img src="images/action.png" alt="">
                 <h3 class="poppins">Flex Tripod</h3>
                 <div class="star">
                     <img width="10px" src="logos/star (1).png" alt="">
