--- a/index.html
+++ b/index.html
@@ -202,10 +202,18 @@ Buyers protection possible!</p>
         <p>Copyright &copy; 2020  influencer products <br>All rights reserved</p>
         <hr>
         <div class="icon-container">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-solid fa-basketball"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
+            <div class="icon">
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="icon">
+                <i class="fa-solid fa-basketball"></i>
+            </div>
+           <div class="icon">
+             <i class="fa-brands fa-twitter"></i>
+           </div>
+            <div class="icon">
+                <i class="fa-brands fa-youtube"></i>
+            </div>
         </div>
     </footer>
 </body>
