--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <nav class="primary-color poppins flex">
+    <nav  class="primary-color poppins flex">
        <h4>Influencer products</h4>
        <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Products</a></li>
         <li><a href="">Sign up</a></li>
         <li><a href="">Log In</a></li>
-        <li><a href=""><img width="20px" src="logos/search.png" alt=""></a></li>
-        <li><a href=""><img width="20px" src="logos/cart.png" alt=""></a></li>
+        <li><img width="20px" src="logos/search.png" alt=""></li>
+        <li><img width="20px" src="logos/cart.png" alt=""></li>
        </ul>
     </nav>
-    <header class="poppins flex">
+    <header class="poppins">
         <div>
         <h1 class="primary-color">Start your Journey as <br>
               Influencer</h1>
            <p class="primary-color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-           <button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+          <div><button class="btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button></div>
         </div>
         <div id="img">
          <img src="images/main-camera.png" alt="">
@@ -198,7 +198,7 @@ Buyers protection possible!</p>
                  </div>
            </section>
     </main>
-    <footer class="manrope">
+    <footer class="manrope footer hide">
         <p>Copyright &copy; 2020  influencer products <br>All rights reserved</p>
         <hr>
         <div class="icon-container">
